--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 ---
 layout: base
-title: "Dean Attali - Resume"
-subtitle: "R-Shiny developer and consultant with a MSc in Bioinformatics and a Bachelor of Computer Science. Previously a software engineer at Google, IBM, and Wish.com."
+title: "Resume"
+subtitle: "artificial intelligence"
 show-avatar: true
 nav-short: false
 ---
