adding new images for home page

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,9 +1,9 @@
 ---
 layout: page
 title: About me
-subtitle: "Or: why you'd want to go on a date with me"
-share-title: "Dean Attali | About me"
-share-description: "R-Shiny developer and consultant with a MSc in Bioinformatics and a Bachelor of Computer Science. Previously a software engineer at Google, IBM, and Wish.com."
+subtitle: ""
+share-title: "Coastal AI | About us"
+share-description: ""
 css: "/assets/css/aboutme.css"
 ---
 
