--- a/index.html
+++ b/index.html
@@ -1,52 +1,27 @@
 ---
 layout: page
-title: "Hi, I'm Dean"
-subtitle: R-Shiny Expert / Open-Source Developer / Tireless Traveller
+title: "Coastal AI"
+subtitle: 
 css: "/assets/css/index.css"
-share-img: /assets/img/deanimg.jpeg
-share-title: "Dean Attali - R-Shiny consultant"
-share-description: "R-Shiny developer and consultant with a MSc in Bioinformatics and a Bachelor of Computer Science. Previously a software engineer at Google, IBM, and Wish.com."
+share-img: /assets/img/coastalai.png
+share-title: "Cutting Artificial Intelligence Technology For Business"
+share-description: " "
 support_promo_box: true
 cover-img:
-  - "/assets/img/big-imgs/costa-rica-house.jpeg" : "Montezuma, Costa Rica (2011)"
-  - "/assets/img/big-imgs/grouse-grind.jpeg" : "Vancouver, Canada (2014)"
-  - "/assets/img/big-imgs/hawaii1.jpeg" : "Kauai, HI, USA (2014)"
-  - "/assets/img/big-imgs/hawaii2.jpeg" : "Kauai, HI, USA (2014)"
-  - "/assets/img/big-imgs/hongkong-cliff-dive.jpeg" : "Hong Kong (2014)"
-  - "/assets/img/big-imgs/hongkong-infinity-pool.jpeg" : "Hong Kong (2014)"
-  - "/assets/img/big-imgs/israel-dive1.jpeg" : "Eilat, Israel (2013)"
-  - "/assets/img/big-imgs/israel-dive2.jpeg" : "Eilat, Israel (2013)"
-  - "/assets/img/big-imgs/israel-dive3.jpeg" : "Eilat, Israel (2013)"
-  - "/assets/img/big-imgs/laos-pond2.jpeg" : "Luang Prabang, Laos (2014)"
-  - "/assets/img/big-imgs/laos-pond1.jpeg" : "Luang Prabang, Laos (2014)"
-  - "/assets/img/big-imgs/laos-pond3.jpeg" : "Luang Prabang, Laos (2014)"
-  - "/assets/img/big-imgs/st-martin.jpeg" : "St Maarten (2014)"
-  - "/assets/img/big-imgs/tanzania.jpeg" : "Mt Kilimanjaro, Tanzania (2012)"
-  - "/assets/img/big-imgs/vietnam-beach.jpg" : "Mui Ne, Vietnam (2013)"
-  - "/assets/img/big-imgs/vietnam-climb.jpeg" : "Cat Ba, Vietnam (2013)"
-  - "/assets/img/big-imgs/vietnam-climb2.jpeg" : "Cat Ba, Vietnam (2013)" 
-  - "/assets/img/big-imgs/vietnam-dunes.jpeg" : "Mui Ne, Vietnam (2013)"
-  - "/assets/img/big-imgs/vietnam-dunes2.jpeg" : "Mui Ne, Vietnam (2013)"
-  - "/assets/img/big-imgs/vietnam-fruits.jpeg" : "Nha Trang, Vietnam (2013)"
-  - "/assets/img/big-imgs/vietnam-hat.jpeg" : "Hoi An, Vietnam (2013)"
-  - "/assets/img/big-imgs/vietnam-jump.jpeg" : "Mui Ne, Vietnam (2013)"
-  - "/assets/img/big-imgs/vietnam-ricefield.jpeg" : "Sapa, Vietnam (2013)"
-  - "/assets/img/big-imgs/vietnam-scooter.jpeg" : "Da Nang, Vietnam (2013)"
-  - "/assets/img/big-imgs/vietnam-walk.jpeg" : "Sapa, Vietnam (2013)"
-  - "/assets/img/big-imgs/california-skydive.jpeg" : "Davis, CA, USA (2008)"
-  - "/assets/img/big-imgs/california-surf.jpeg" : "Los Angeles, CA, USA (2008)"
-  - "/assets/img/big-imgs/california-surf2.jpeg" : "Los Angeles, CA, USA (2008)" 
-  - "/assets/img/big-imgs/california-surf3.jpeg" : "Santa Cruz, CA, USA (2009)"
-  - "/assets/img/big-imgs/costa-rica.jpeg" : "Arenal, Costa Rica (2011)"
-  - "/assets/img/big-imgs/rio-hanggliding.JPG" : "Rio de Janeiro, Brazil (2015)"  
-  - "/assets/img/big-imgs/rio-steps.jpg" : "Rio de Janeiro, Brazil (2015)"  
-  - "/assets/img/big-imgs/hawaii-turtles.jpg" : "Oahu, HI, USA (2016)"  
-  - "/assets/img/big-imgs/banff-mountains.jpg" : "Banff, Canada (2017)"  
-  - "/assets/img/big-imgs/delft-canal.jpg" : "Delft, Netherlands (2017)"  
-  - "/assets/img/big-imgs/delft-duck.jpg" : "Delft, Netherlands (2017)"  
-  - "/assets/img/big-imgs/israel-camel.jpg" : "Arad, Israel (2018)"  
-  - "/assets/img/big-imgs/israel-haifa.jpg" : "Haifa, Israel (2018)"  
-  - "/assets/img/big-imgs/maui-volcano.jpg" : "Maui, HI, USA (2018)"  
+  - "/assets/img/big-imgs/fotorai1.jpg" : "generative ai in action"
+  - "/assets/img/big-imgs/fotorai2.jpg" : "generative ai in action"
+  - "/assets/img/big-imgs/fotorai3.jpg" : "generative ai in action"
+  - "/assets/img/big-imgs/gemini1.jpg" : "generative ai in action"
+  - "/assets/img/big-imgs/gemini2.jpg" : "generative ai in action"
+  - "/assets/img/big-imgs/gemini3.jpg" : "generative ai in action"
+  - "/assets/img/big-imgs/gemini4.jpg" : "generative ai in action"
+  - "/assets/img/big-imgs/gemini5.jpg" : "generative ai in action"
+  - "/assets/img/big-imgs/gemini6.jpg" : "generative ai in action"
+  - "/assets/img/big-imgs/gemini7.jpg" : "generative ai in action"
+  - "/assets/img/big-imgs/pixl1.jpg" : "generative ai in action"
+  - "/assets/img/big-imgs/pixl2.jpg" : "generative ai in action"
+  - "/assets/img/big-imgs/pixl3.jpg" : "generative ai in action"
+  - "/assets/img/big-imgs/pixl4.jpg" : "generative ai in action"
 ---
 
 <div class="list-filters">
