--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,10 @@ css: "/assets/css/aboutme.css"
 
 <p class="about-text">
 <span class="fa fa-code about-icon"></span>
-I enjoy writing <strong>useful & reusable software tools</strong> to help others &mdash; check out <a href="/projects">my projects</a>. In the past several years I've become an experienced R useR and an expert in R-Shiny.
+Evans Doe Ocansey completed his Bachelor's degree (First Class Honours, Kwame Nkrumah University of Science and Technology) in 2009, his Post Graduate Diploma (Mathematical Science, African Institute for Mathematical Sciences) in 2011, his Master's degree (Cum Laude, Stellenbosch University) in 2013, and his PhD degree (Distinction, Johannes Kepler University Linz) in Mathematics in 2019. He then worked as a Postdoc at the Institute for Algebra & Research Institute for Symbolic Computation at Johannes Kepler University from 2019 to 2021. Since October 2022, he has been a Data Scientist at RISC Software GmbH, where he works on various customer and research projects. His main areas of expertise include:
+
+Time series forecasting
+Machine Learning and Deep Learning for supervised, unsupervised, semi-supervised related problems
 </p>
 
 
