--- a/shiny/index.html
+++ b/shiny/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>AttaliTech Ltd</title>
+    <title> Coastal AI</title>
     <script>
-      window.location = "https://attalitech.com/";
+      window.location = "https://";
     </script>
     <noscript>
-      <a href="https://attalitech.com/">Click here to go to AttaliTech Ltd</a>
+      <a href="https://.com/">Click here to go </a>
     </noscript>
   </head>
 </html>
