--- a/aboutme.html
+++ b/aboutme.html
@@ -7,6 +7,41 @@ share-description: ""
 css: "/assets/css/aboutme.css"
 ---
 
+
+<head>
+  <title>About Me</title>
+  <style>
+    /* Basic styling for the section */
+    .about-me {
+      display: flex;
+      align-items: center;
+    }
+
+    .profile-picture {
+      width: 200px; /* Adjust the width as needed */
+      height: 200px;
+      border-radius: 50%;
+      margin-right: 20px;
+    }
+
+    .bio {
+      flex-grow: 1;
+    }
+  </style>
+</head>
+<body>
+  <section class="about-me">
+    <img class="profile-picture" src="your-profile-picture.jpg" alt="Your Profile Picture">
+    <div class="bio">
+      <h2>About Me</h2>
+      <p>This is where you can write a brief introduction about yourself.</p>
+      <p>Feel free to share your interests, hobbies, or any other relevant information.</p>
+    </div>
+  </section>
+</body>
+
+
+
 <div id="aboutme-section">
 
 
