--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@ css: "/assets/css/aboutme.css"
 
 
 <head>
-  <title>About Me</title>
+  <title>About Us/title>
   <style>
     /* Basic styling for the section */
     .about-me {
@@ -34,15 +34,23 @@ css: "/assets/css/aboutme.css"
     <img class="profile-picture" src="your-profile-picture.jpg" alt="Your Profile Picture">
     <div class="bio">
       <h2>About Me</h2>
-      <p>This is where you can write a brief introduction about yourself.</p>
-      <p>Feel free to share your interests, hobbies, or any other relevant information.</p>
+      <p>Evans Doe Ocansey completed his Bachelor's degree (First Class Honours, Kwame Nkrumah University 
+        of Science and Technology) in 2009, his Post Graduate Diploma (Mathematical Science, 
+        African Institute for Mathematical Sciences) in 2011, his Master's degree (Cum Laude, Stellenbosch University) 
+        in 2013, and his PhD degree (Distinction, Johannes Kepler University Linz) in Mathematics in 2019. 
+        He then worked as a Postdoc at the Institute for Algebra & Research Institute for Symbolic 
+        Computation at Johannes Kepler University from 2019 to 2021. Since October 2022, 
+        he has been a Data Scientist at RISC Software GmbH, where he works on various customer 
+        and research projects. His main areas of expertise include:  .</p>
+      <p>Feel Time series forecasting
+Machine Learning and Deep Learning for supervised, unsupervised, semi-supervised related problems.</p>
     </div>
   </section>
 </body>
 
 
 
-<div id="aboutme-section">
+<!-- <div id="aboutme-section"> -->
 
 
 
