--- a/aboutme.html
+++ b/aboutme.html
@@ -31,7 +31,7 @@ css: "/assets/css/aboutme.css"
 </head>
 <body>
   <section class="about-me">
-    <img class="profile-picture" src="your-profile-picture.jpg" alt="Your Profile Picture">
+    <img class="profile-picture" src="assets/aboutmepics/evans-new-2.jpeg" alt="Your Profile Picture">
     <div class="bio">
       <h2>About Me</h2>
       <p>Evans Doe Ocansey completed his Bachelor's degree (First Class Honours, Kwame Nkrumah University 
