--- a/aboutme.html
+++ b/aboutme.html
@@ -1,4 +1,5 @@
-
+<!DOCTYPE html>
+<html>
 
 <head>
   <title>About Us/title>
@@ -41,80 +42,7 @@ Machine Learning and Deep Learning for supervised, unsupervised, semi-supervised
 </body>
 
 
+</html>
 
-<!-- <div id="aboutme-section"> -->
-
-
-
-
-<p class="about-text">
-<span class="fa fa-code about-icon"></span>
-Evans Doe Ocansey completed his Bachelor's degree (First Class Honours, Kwame Nkrumah University of Science and Technology) in 2009, his Post Graduate Diploma (Mathematical Science, African Institute for Mathematical Sciences) in 2011, his Master's degree (Cum Laude, Stellenbosch University) in 2013, and his PhD degree (Distinction, Johannes Kepler University Linz) in Mathematics in 2019. He then worked as a Postdoc at the Institute for Algebra & Research Institute for Symbolic Computation at Johannes Kepler University from 2019 to 2021. Since October 2022, he has been a Data Scientist at RISC Software GmbH, where he works on various customer and research projects. His main areas of expertise include:
-
-Time series forecasting
-Machine Learning and Deep Learning for supervised, unsupervised, semi-supervised related problems
-</p>
-
-
-
-<p class="about-text">
-<span class="fa fa-file-alt about-icon"></span>
-The <strong><a href="/projects">projects</a></strong> page is a nice place to see some of my work, but you can also view my (somewhat outdated) <a href="/resume">resume</a>. 
-</p>
-
-<p class="about-text">
-<span class="fa fa-globe-americas about-icon"></span>
-
-</p>
-
-</div>
-
-<div id="contactme-section">
-<h1 id="contact">Contact</h1>
-
-
-
-
-<p>You can <a href="mailto:dean@attalitech.com?subject=Hello from deanattali.com">email me</a> or find me <a href="https://twitter.com/daattali">on Twitter</a> </p>
-
-<p>If you'd like to set up a meeting with me, <a href="https://calendly.com/attalitech/meeting">click here to schedule a meeting</a> based on your availability.</p>
-
-<form action="https://formspree.io/daattali@gmail.com" method="POST" class="form" id="contact-form">
-  <p>You can also send me a quick message using the form below:</p>
-  <div class="row">
-    <div class="col-6">
-      <input type="email" name="_replyto" required="required" class="form-control form-control-lg" placeholder="Email" title="Email">
-    </div>
-    <div class="col-6">
-      <input type="text" name="name" class="form-control form-control-lg" placeholder="Name" title="Name">
-    </div>
-  </div>
-  <input type="hidden" name="_subject" value="New submission from deanattali.com">
-  <textarea type="text" name="content" class="form-control form-control-lg" placeholder="Message" title="Message" required="required" rows="3"></textarea>
-  <input type="text" name="_gotcha" style="display:none">
-  <input type="hidden" name="_next" value="?message=Your message was sent successfully, thanks!" />
-  
-  <div style="font-size: 12px; margin: -10px 0 10px;">Please note this is my <b>personal</b> contact form. For professional inquiries or questions about R/Shiny, contact me via <a href="https://attalitech.com">AttaliTech</a>.</div>
-  
-  <button type="submit" class="btn btn-lg btn-primary">Submit</button>
-</form>
-
-
-</div>
-
-<br/>
-
-<div id="feed-meeee">
-  <br/>
-  <p align="center">
-    <a style="display: inline-block;" href="https://paypal.me/daattali">
-      <img height="40" src="https://camo.githubusercontent.com/0e9e5cac101f7093336b4589c380ab5dcfdcbab0/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f74776f6c66736f6e2f70617970616c2d6769746875622d627574746f6e40312e302e302f646973742f627574746f6e2e737667" />
-    </a>
-    <a style="display: inline-block; margin-left: 10px;" href="https://github.com/sponsors/daattali">
-      <img height="40" src="https://i.imgur.com/034B8vq.png" />
-    </a>
-  </p>
-  
   
  
-</div>
