--- a/aboutme.html
+++ b/aboutme.html
@@ -1,33 +1,10 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <title>About Us/title>
-  <style>
-    /* Basic styling for the section */
-    .about-me {
-      display: flex;
-      align-items: center;
-    }
-
-    .profile-picture {
-      width: 200px; /* Adjust the width as needed */
-      height: 200px;
-      border-radius: 50%;
-      margin-right: 20px;
-    }
-
-    .bio {
-      flex-grow: 1;
-    }
-  </style>
-</head>
-<body>
-  <section class="about-me">
-    <img class="profile-picture" src="assets/aboutmepics/evans-new-2.jpeg" alt="Your Profile Picture">
-    <div class="bio">
-      <h2>About Me</h2>
-      <p>Evans Doe Ocansey completed his Bachelor's degree (First Class Honours, Kwame Nkrumah University 
+<div class="about-me-section">
+  <div class="profile-picture">
+    <img src="assets/aboutmepics/evans-new-2.jpeg" alt="Your Name" class="profile-pic">
+  </div>
+  <div class="about-me-text">
+    <h2>About Me</h2>
+     <p>Evans Doe Ocansey completed his Bachelor's degree (First Class Honours, Kwame Nkrumah University 
         of Science and Technology) in 2009, his Post Graduate Diploma (Mathematical Science, 
         African Institute for Mathematical Sciences) in 2011, his Master's degree (Cum Laude, Stellenbosch University) 
         in 2013, and his PhD degree (Distinction, Johannes Kepler University Linz) in Mathematics in 2019. 
@@ -37,12 +14,5 @@
         and research projects. His main areas of expertise include:  .</p>
       <p>Feel Time series forecasting
 Machine Learning and Deep Learning for supervised, unsupervised, semi-supervised related problems.</p>
-    </div>
-  </section>
-</body>
-
-
-</html>
-
-  
- 
+  </div>
+</div>
