--- a/aboutme.html
+++ b/aboutme.html
@@ -1,9 +1,49 @@
+.about-me-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  background-color: #f7f7f7;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.profile-picture {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin: 20px;
+  overflow: hidden;
+}
+
+.profile-pic {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.about-me-text {
+  flex: 1;
+  padding: 20px;
+}
+
+.about-me-text h2 {
+  margin-top: 0;
+}
+
+.about-me-text p {
+  margin-bottom: 20px;
+}
+
 <div class="about-me-section">
   <div class="profile-picture">
     <img src="assets/aboutmepics/evans-new-2.jpeg" alt="Your Name" class="profile-pic">
   </div>
   <div class="about-me-text">
-    <h2>About Me</h2>
+    <h2>About Us</h2>
      <p>Evans Doe Ocansey completed his Bachelor's degree (First Class Honours, Kwame Nkrumah University 
         of Science and Technology) in 2009, his Post Graduate Diploma (Mathematical Science, 
         African Institute for Mathematical Sciences) in 2011, his Master's degree (Cum Laude, Stellenbosch University) 
