--- a/aboutme.html
+++ b/aboutme.html
@@ -1,22 +1,48 @@
 
-<div class="about-me-section">
-  <div class="profile-picture">
-  
+<div class="about-section">
+  <h1>About Us Page</h1>
+  <p>Some text about who we are and what we do.</p>
+  <p>Resize the browser window to see that this page is responsive by the way.</p>
+</div>
 
- 
-    <img src="assets/aboutmepics/evans-new-2.jpeg" alt="Image" style="width: 200px; height: 200px; margin: 10px;">
+<h2 style="text-align:center">Our Team</h2>
+<div class="row">
+  <div class="column">
+    <div class="card">
+      <img src="assets/aboutmepics/evans-new-2.jpeg" alt="Jane" style="width:100%">
+      <div class="container">
+        <h2>Jane Doe</h2>
+        <p class="title">CEO & Founder</p>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>jane@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
   </div>
-  <div class="about-me-text">
-    <h2>About Us</h2>
-     <p>Evans Doe Ocansey completed his Bachelor's degree (First Class Honours, Kwame Nkrumah University 
-        of Science and Technology) in 2009, his Post Graduate Diploma (Mathematical Science, 
-        African Institute for Mathematical Sciences) in 2011, his Master's degree (Cum Laude, Stellenbosch University) 
-        in 2013, and his PhD degree (Distinction, Johannes Kepler University Linz) in Mathematics in 2019. 
-        He then worked as a Postdoc at the Institute for Algebra & Research Institute for Symbolic 
-        Computation at Johannes Kepler University from 2019 to 2021. Since October 2022, 
-        he has been a Data Scientist at RISC Software GmbH, where he works on various customer 
-        and research projects. His main areas of expertise include:  .</p>
-      <p>Feel Time series forecasting
-Machine Learning and Deep Learning for supervised, unsupervised, semi-supervised related problems.</p>
+
+  <div class="column">
+    <div class="card">
+      <img src="assets/aboutmepics/evans-new-2.jpeg" alt="Mike" style="width:100%">
+      <div class="container">
+        <h2>Mike Ross</h2>
+        <p class="title">Art Director</p>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>mike@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card">
+      <img src="assets/aboutmepics/evans-new-2.jpeg" alt="John" style="width:100%">
+      <div class="container">
+        <h2>John Doe</h2>
+        <p class="title">Designer</p>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>john@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
   </div>
 </div>
