--- a/aboutme.html
+++ b/aboutme.html
@@ -76,20 +76,29 @@ html {
 <body>
 
 <div class="about-section">
-  <h1>About Us Page</h1>
-  <p>Some text about who we are and what we do.</p>
-  <p>Resize the browser window to see that this page is responsive by the way.</p>
+  <h1>About Us </h1>
+  <p> Artificial Intelligence professionals interested in applying AI to solve practical problems</p>
+  <p> We love technology and the opportunity that it bring to problem solving</p>
 </div>
 
-<h2 style="text-align:center">Our Team</h2>
-<div class="row">
+<h2 style="text-align:center">Meet Our Team</h2>
+<div class="column">
   <div class="column">
     <div class="card">
       <img src="assets/aboutmepics/evans-new-2.jpeg" alt="Jane" style="width:100%">
       <div class="container">
-        <h2>Jane Doe</h2>
-        <p class="title">CEO & Founder</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <h2>Evans Doe Ocansey </h2>
+        <p class="title">Co-Founder</p>
+           <p>Evans completed his Bachelor's degree (First Class Honours, Kwame Nkrumah University 
+        of Science and Technology) in 2009, his Post Graduate Diploma (Mathematical Science, 
+        African Institute for Mathematical Sciences) in 2011, his Master's degree (Cum Laude, Stellenbosch University) 
+        in 2013, and his PhD degree (Distinction, Johannes Kepler University Linz) in Mathematics in 2019. 
+        He then worked as a Postdoc at the Institute for Algebra & Research Institute for Symbolic 
+        Computation at Johannes Kepler University from 2019 to 2021. Since October 2022, 
+        he has been a Data Scientist at RISC Software GmbH, where he works on various customer 
+        and research projects. His main areas of expertise include:  .</p>
+      <p>Feel Time series forecasting
+Machine Learning and Deep Learning for supervised, unsupervised, semi-supervised related problems.</p>
         <p>jane@example.com</p>
         <p><button class="button">Contact</button></p>
       </div>
@@ -100,8 +109,8 @@ html {
     <div class="card">
       <img src="assets/aboutmepics/evans-new-2.jpeg" alt="Mike" style="width:100%">
       <div class="container">
-        <h2>Mike Ross</h2>
-        <p class="title">Art Director</p>
+        <h2>Stephen Moore </h2>
+        <p class="title">Co-Founder</p>
         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
         <p>mike@example.com</p>
         <p><button class="button">Contact</button></p>
@@ -113,8 +122,8 @@ html {
     <div class="card">
       <img src="assets/aboutmepics/evans-new-2.jpeg" alt="John" style="width:100%">
       <div class="container">
-        <h2>John Doe</h2>
-        <p class="title">Designer</p>
+        <h2>Nana Boateng</h2>
+        <p class="title">Co-Founder</p>
         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
         <p>john@example.com</p>
         <p><button class="button">Contact</button></p>
