--- a/aboutme.html
+++ b/aboutme.html
@@ -82,7 +82,7 @@ html {
 </div>
 
 <h2 style="text-align:center">Meet Our Team</h2>
-<div class="column">
+<div class="row">
   <div class="column">
     <div class="card">
       <img src="assets/aboutmepics/evans-new-2.jpeg" alt="Jane" style="width:100%">
