--- a/aboutme.html
+++ b/aboutme.html
@@ -76,20 +76,20 @@ html {
 <body>
 
 <div class="about-section">
-  <h1>About Us </h1>
-  <p> Artificial Intelligence professionals interested in applying AI to solve practical problems</p>
-  <p> We love technology and the opportunity that it bring to problem solving</p>
+  <h1>About Us Page</h1>
+  <p>Some text about who we are and what we do.</p>
+  <p>Resize the browser window to see that this page is responsive by the way.</p>
 </div>
 
-<h2 style="text-align:center">Meet Our Team</h2>
+<h2 style="text-align:center">Our Team</h2>
 <div class="row">
   <div class="column">
     <div class="card">
       <img src="assets/aboutmepics/evans-new-2.jpeg" alt="Jane" style="width:100%">
       <div class="container">
-        <h2>Evans Doe Ocansey </h2>
+        <h2>Evans Doe Ocansey</h2>
         <p class="title">Co-Founder</p>
-           <p>Evans completed his Bachelor's degree (First Class Honours, Kwame Nkrumah University 
+           <p>Evans  completed his Bachelor's degree (First Class Honours, Kwame Nkrumah University 
         of Science and Technology) in 2009, his Post Graduate Diploma (Mathematical Science, 
         African Institute for Mathematical Sciences) in 2011, his Master's degree (Cum Laude, Stellenbosch University) 
         in 2013, and his PhD degree (Distinction, Johannes Kepler University Linz) in Mathematics in 2019. 
@@ -107,9 +107,9 @@ Machine Learning and Deep Learning for supervised, unsupervised, semi-supervised
 
   <div class="column">
     <div class="card">
-      <img src="assets/aboutmepics/evans-new-2.jpeg" alt="Mike" style="width:100%">
+      <img src="/w3images/team2.jpg" alt="Mike" style="width:100%">
       <div class="container">
-        <h2>Stephen Moore </h2>
+        <h2>Stephen Moore</h2>
         <p class="title">Co-Founder</p>
         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
         <p>mike@example.com</p>
@@ -120,7 +120,7 @@ Machine Learning and Deep Learning for supervised, unsupervised, semi-supervised
   
   <div class="column">
     <div class="card">
-      <img src="assets/aboutmepics/evans-new-2.jpeg" alt="John" style="width:100%">
+      <img src="/w3images/team3.jpg" alt="John" style="width:100%">
       <div class="container">
         <h2>Nana Boateng</h2>
         <p class="title">Co-Founder</p>
