--- a/aboutme.html
+++ b/aboutme.html
@@ -97,7 +97,7 @@ html {
         Computation at Johannes Kepler University from 2019 to 2021. Since October 2022, 
         he has been a Data Scientist at RISC Software GmbH, where he works on various customer 
         and research projects. His main areas of expertise include:  .</p>
-      <p>Feel Time series forecasting
+      <p> Time series forecasting
 Machine Learning and Deep Learning for supervised, unsupervised, semi-supervised related problems.</p>
         <p>jane@example.com</p>
         <p><button class="button">Contact</button></p>
@@ -124,8 +124,15 @@ Machine Learning and Deep Learning for supervised, unsupervised, semi-supervised
       <div class="container">
         <h2>Nana Boateng</h2>
         <p class="title">Co-Founder</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>john@example.com</p>
+          <p> Nana interested in Applying mathematics, statistics,economics and computer science concepts in solving business, economic, finance and industrial problems.</p>
+	             <h2>Areas of Expertise</h2>
+
+                 <ul>
+                    <li> Applied statistical methods such as non-parametric methods,exact statistical methods, bayesian inference, hierachical/multilevel models, time series, survival analysis ,Markov Chain Monte-carlo.</li>
+                    <li>Machine learning (deep learning, recommender systems, natural language processing, network analysis), Clustering Algorithms, Dimensionality Reduction.</li>
+                    <li>Quantitative finance ( Monte Carlo simulation, risk quantification, portfolio optimization, economic scenario generation)</li>
+                 </ul> 
+        <p>coastalaighana@gmail.com</p>
         <p><button class="button">Contact</button></p>
       </div>
     </div>
