--- a/aboutme.html
+++ b/aboutme.html
@@ -64,7 +64,20 @@ html {
 .button:hover {
   background-color: #555;
 }
+.profile-picture {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin: 20px;
+  overflow: hidden;
+}
 
+.profile-pic {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
 @media screen and (max-width: 650px) {
   .column {
     width: 100%;
@@ -96,9 +109,14 @@ html {
         He then worked as a Postdoc at the Institute for Algebra & Research Institute for Symbolic 
         Computation at Johannes Kepler University from 2019 to 2021. Since October 2022, 
         he has been a Data Scientist at RISC Software GmbH, where he works on various customer 
-        and research projects. His main areas of expertise include:  .</p>
-      <p> Time series forecasting
-Machine Learning and Deep Learning for supervised, unsupervised, semi-supervised related problems.</p>
+        and research projects. 
+         
+	<h2>Areas of Expertise</h2>
+
+            <ul>
+              <li> Time series forecasting Machine Learning.</li>
+              <li> Deep Learning for supervised, unsupervised, semi-supervised related problems..</li>
+            </ul> 
         <p>jane@example.com</p>
         <p><button class="button">Contact</button></p>
       </div>
@@ -107,7 +125,7 @@ Machine Learning and Deep Learning for supervised, unsupervised, semi-supervised
 
   <div class="column">
     <div class="card">
-      <img src="/w3images/team2.jpg" alt="Mike" style="width:100%">
+      <img src="/w3images/team2.jpg" alt="Moore" style="width:100%">
       <div class="container">
         <h2>Stephen Moore</h2>
         <p class="title">Co-Founder</p>
@@ -120,12 +138,22 @@ Machine Learning and Deep Learning for supervised, unsupervised, semi-supervised
   
   <div class="column">
     <div class="card">
-      <img src="/w3images/team3.jpg" alt="John" style="width:100%">
+      <img src="assets/aboutmepics/nana3.png" alt="Nana" style="width:100%">
       <div class="container">
         <h2>Nana Boateng</h2>
         <p class="title">Co-Founder</p>
           <p> Nana interested in Applying mathematics, statistics,economics and computer science concepts in solving business, economic, finance and industrial problems.</p>
-	             <h2>Areas of Expertise</h2>
+	  <h2>Education</h2>
+
+              <ul>
+                   <li> Ph.D (2016), Statistics, University of Memphis.</li>
+                   <li> MA (2017), Economics, University of Memphis.</li>
+                   <li> M.Sc (2014), Statistics, University of Memphis.</li>
+                   <li> M.Sc (2012), Mathematics, Middle Tennessee State University.</li>
+                   <li> B.Sc (2007), Mathematics , Kwame Nkrumah University of Science and Technology.</li>
+                </ul>        
+	      
+	      <h2>Areas of Expertise</h2>
 
                  <ul>
                     <li> Applied statistical methods such as non-parametric methods,exact statistical methods, bayesian inference, hierachical/multilevel models, time series, survival analysis ,Markov Chain Monte-carlo.</li>
