--- a/aboutme.html
+++ b/aboutme.html
@@ -90,8 +90,10 @@ html {
 
 <div class="about-section">
   <h1>About Us Page</h1>
-  <p>Some text about who we are and what we do.</p>
-  <p>Resize the browser window to see that this page is responsive by the way.</p>
+ 
+     <p>Our mission is to harness the power of artificial intelligence to solve real-world problems and create a brighter future.</p>
+     <p>We are a team of passionate innovators dedicated to developing cutting-edge AI solutions that drive positive change.</p>
+     <p>With a focus on  machine learning, natural language processing, computer vision etc. We are committed to pushing the boundaries of what is possible with AI.</p>
 </div>
 
 <h2 style="text-align:center">Our Team</h2>
