--- a/aboutme.html
+++ b/aboutme.html
@@ -89,7 +89,7 @@ html {
 <body>
 
 <div class="about-section">
-  <h1>About Us Page</h1>
+  <h1>Meet the team</h1>
  
      <p>Our mission is to harness the power of artificial intelligence to solve real-world problems and create a brighter future.</p>
      <p>We are a team of passionate innovators dedicated to developing cutting-edge AI solutions that drive positive change.</p>
