--- a/resume.html
+++ b/resume.html
@@ -7,5 +7,5 @@ nav-short: false
 ---
 
 <div style="text-align: center; margin-top: 90px;">
-  <iframe src="https://deanattali.com/files/DeanAttaliResumeEU.pdf" scrolling="no" width="850px" height="2200px" frameBorder="0"></iframe>
+  <iframe src="https://deanattali.com/files/resume.pdf" scrolling="no" width="850px" height="2200px" frameBorder="0"></iframe>
 </div>
